# leafwing_2d

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  RELEASES.md
.github/workflows/: ci.yml
assets/: asset-licenses.csv
examples/: game_of_life.rs  hello_world.rs  minimal.rs  rotation.rs
macros/: Cargo.toml
macros/src/: lib.rs  trivial_coordinate.rs
src/: bounding.rs  bundles.rs  continuous.rs  coordinate.rs  discrete.rs  errors.rs  kinematics.rs  lib.rs  orientation.rs  partitioning.rs  plugin.rs  position.rs  scale.rs
tests/: integration.rs  orientation_conversions.rs  plugin.rs  position_conversions.rs
