[package]
name = "leafwing-2d"
description = "Helper functions and structs for working with 2D space in Bevy."
version = "0.0.0"
authors = ["Leafwing Studios"]
repository = "https://github.com/leafwing-studios/leafwing-2d"
license = "MIT OR Apache-2.0"
edition = "2021"
categories = ["game-development"]
keywords = ["bevy"]
exclude = ["assets/**/*", "tools/**/*", ".github/**/*"]
resolver = "2"

[profile.dev]
opt-level = 3

[workspace]
members = ["./", "tools/ci"]

[dependencies]
bevy = { version = "0.6", default-features = false, features = ["dynamic"]}
