[package]
name = "leafwing_2d"
description = "Helper functions and structs for working with 2D space in Bevy."
version = "0.1.0"
authors = ["Leafwing Studios"]
repository = "https://github.com/leafwing-studios/leafwing_2d"
license = "MIT OR Apache-2.0"
edition = "2021"
categories = ["game-development"]
keywords = ["bevy"]
exclude = ["assets/**/*", "tools/**/*", ".github/**/*"]
resolver = "2"

[profile.dev]
opt-level = 3

[workspace]
members = ["./", "tools/ci"]

[dependencies]
bevy_app = {version = "0.7", default-features = false}
bevy_ecs = { version = "0.7", default-features = false}
bevy_math = { version = "0.7", default-features = false}
bevy_transform = { version = "0.7", default-features = false}
bevy_core = {version = "0.7", default-features = false}
derive_more = "0.99"
leafwing_2d_macros = { path = "macros", version = "0.1" }

[dev-dependencies]
bevy = "0.7"